--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled12.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuMEwXeY7yDALgPOgfyhG8",
+      "authorship_tag": "ABX9TyMvIXMx1ctwJisCGMrGHtvq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,37 @@
             "2 1 \n",
             "1 \n",
             "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IdLYB39-xoVF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "cf31e266-25d9-4c1e-a53a-1c785b7756fb"
+      },
+      "source": [
+        "rows = int(input(\"Enter a number\"))\n",
+        "for j in range(1, rows+1):\n",
+        "   print(\"* \" *j)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a number4\n",
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n"
           ],
           "name": "stdout"
         }
