--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNurp3xPH+gN6WxSUkPo5mo",
+      "authorship_tag": "ABX9TyNbX4onNvxdODnv8XTII3mZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,6 +72,72 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7BQcz6-lPYKv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "8852addb-6b45-4f1e-cfbe-a31dbd8df808"
+      },
+      "source": [
+        "a=[]\n",
+        "n=int(input(\"Enter number of elements:\"))\n",
+        "for i in range(1,n+1):\n",
+        "    b=int(input(\"Enter element:\"))\n",
+        "    a.append(b)\n",
+        "even=[]\n",
+        "odd=[]\n",
+        "for j in a:\n",
+        "    if(j%2==0):\n",
+        "        even.append(j)\n",
+        "    else:\n",
+        "        odd.append(j)\n",
+        "print(\"The even list\",even)\n",
+        "print(\"The odd list\",odd)\n",
+        "x=0\n",
+        "l=[int(input(x)) for _ in range(int(input(\"Enter n\")))]\n",
+        "print('even list is',[ i for i in l if i%2])\n",
+        "print('odd list is',[i for i in l if not i%2])\n",
+        "\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter number of elements:2\n",
+            "Enter element:10\n",
+            "Enter element:20\n",
+            "The even list [10, 20]\n",
+            "The odd list []\n",
+            "Enter n3\n",
+            "10\n",
+            "20\n",
+            "30\n",
+            "even list is []\n",
+            "odd list is [10, 20, 30]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jKmeN3m1P1MP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
