--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbX4onNvxdODnv8XTII3mZ",
+      "authorship_tag": "ABX9TyPBXmdjdLXdRlyBmM0h/U9f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jKmeN3m1P1MP",
+        "id": "ZjKfhsdgP7cM",
         "colab_type": "code",
         "colab": {}
       },
@@ -138,6 +138,65 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jKmeN3m1P1MP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "318b37a0-a8f3-419e-d926-4787b780cd6f"
+      },
+      "source": [
+        "a=[]\n",
+        "c=[]\n",
+        "n1=int(input(\"Enter number of elements:\"))\n",
+        "for i in range(1,n1+1):\n",
+        "    b=int(input(\"Enter element:\"))\n",
+        "    a.append(b)\n",
+        "n2=int(input(\"Enter number of elements:\"))\n",
+        "for i in range(1,n2+1):\n",
+        "    d=int(input(\"Enter element:\"))\n",
+        "    c.append(d)\n",
+        "new=a+c\n",
+        "new.sort()\n",
+        "print(\"Sorted list is:\",new)\n",
+        "x=0\n",
+        "l=[int(input(x))\n",
+        "for _ in range(int(input(\"Enter how many elements\")))]\n",
+        "m=[int(input(x))\n",
+        "for _ in range(int(input(\"Enter how many elements \")))]\n",
+        "new=l+m\n",
+        "new.sort()\n",
+        "print(\"Sorted list is:\",new)\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter number of elements:2\n",
+            "Enter element:10\n",
+            "Enter element:20\n",
+            "Enter number of elements:3\n",
+            "Enter element:10\n",
+            "Enter element:20\n",
+            "Enter element:30\n",
+            "Sorted list is: [10, 10, 20, 20, 30]\n",
+            "Enter how many elements2\n",
+            "100\n",
+            "200\n",
+            "Enter how many elements 2\n",
+            "25\n",
+            "45\n",
+            "Sorted list is: [25, 45, 100, 200]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
