--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBXmdjdLXdRlyBmM0h/U9f",
+      "authorship_tag": "ABX9TyOt82PKQXDxyXaGivb39pNF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,9 +146,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 269
+          "height": 218
         },
-        "outputId": "318b37a0-a8f3-419e-d926-4787b780cd6f"
+        "outputId": "e0537a23-ee23-492f-a338-0901c056b6a2"
       },
       "source": [
         "a=[]\n",
@@ -173,30 +173,76 @@
         "new.sort()\n",
         "print(\"Sorted list is:\",new)\n"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Enter number of elements:2\n",
+            "Enter number of elements:1\n",
+            "Enter element:0\n",
+            "Enter number of elements:1\n",
             "Enter element:10\n",
-            "Enter element:20\n",
-            "Enter number of elements:3\n",
-            "Enter element:10\n",
-            "Enter element:20\n",
-            "Enter element:30\n",
-            "Sorted list is: [10, 10, 20, 20, 30]\n",
+            "Sorted list is: [0, 10]\n",
             "Enter how many elements2\n",
-            "100\n",
-            "200\n",
+            "0\n",
+            "0\n",
             "Enter how many elements 2\n",
-            "25\n",
-            "45\n",
-            "Sorted list is: [25, 45, 100, 200]\n"
+            "11\n",
+            "20\n",
+            "Sorted list is: [0, 0, 11, 20]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L-74mEtgSFSc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "550c9e73-169b-4480-c9b8-9ae801b96ace"
+      },
+      "source": [
+        "a=[['A',34],['B',21],['C',26],['E',29]]\n",
+        "for i in range(0,len(a)):\n",
+        "    for j in range(i+1,len(a)):\n",
+        "        if(a[i][1]>a[j][1]):\n",
+        "            temp=a[j]\n",
+        "            a[j]=a[i]\n",
+        "            a[i]=temp\n",
+        "print(a)\n",
+        "a=[['A',34],['B',21],['C',26],['E',29]]\n",
+        "a.sort(key = lambda x: x[1]) \n",
+        "print(a)\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[['B', 21], ['C', 26], ['E', 29], ['A', 34]]\n",
+            "[['B', 21], ['C', 26], ['E', 29], ['A', 34]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ye5MXJnvUOx6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
