--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOt82PKQXDxyXaGivb39pNF",
+      "authorship_tag": "ABX9TyPfVDbt6VH5ovX/pUVZlV33",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,6 +226,56 @@
           "text": [
             "[['B', 21], ['C', 26], ['E', 29], ['A', 34]]\n",
             "[['B', 21], ['C', 26], ['E', 29], ['A', 34]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_I3txdzMU1BU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 151
+        },
+        "outputId": "5a5ea202-6133-4f1c-a736-98f4e1b25b8f"
+      },
+      "source": [
+        "a=[]\n",
+        "n=int(input(\"Enter number of elements:\"))\n",
+        "for i in range(1,n+1):\n",
+        "    b=int(input(\"Enter element:\"))\n",
+        "    a.append(b)\n",
+        "for i in range(0,len(a)):\n",
+        "    for j in range(0,len(a)-i-1):\n",
+        "        if(a[j]>a[j+1]):\n",
+        "            temp=a[j]\n",
+        "            a[j]=a[j+1]\n",
+        "            a[j+1]=temp \n",
+        "print('Second largest number is:',a[n-2])\n",
+        "#Instead of  forementioned 12 lines program, the equivalent 4 lines ! \n",
+        "#Pythonic program is here ....\n",
+        "\n",
+        "x=0\n",
+        "l=[int(input(x)) for _ in range(int(input(\"Enter how many elements\")))]\n",
+        "l.sort()\n",
+        "print(\"Second largest element is :\",l[-2])\n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter number of elements:2\n",
+            "Enter element:10\n",
+            "Enter element:20\n",
+            "Second largest number is: 10\n",
+            "Enter how many elements2\n",
+            "100\n",
+            "200\n",
+            "Second largest element is : 100\n"
           ],
           "name": "stdout"
         }
