--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfVDbt6VH5ovX/pUVZlV33",
+      "authorship_tag": "ABX9TyMj++KlXw+NQ4Jt3IKQLLyr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,6 +276,50 @@
             "100\n",
             "200\n",
             "Second largest element is : 100\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5kTM5dSGVnEI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "5c4adff5-1a41-44c7-f161-2a615c23feb5"
+      },
+      "source": [
+        "l_range=int(input(\"Enter the lower range:\"))\n",
+        "u_range=int(input(\"Enter the upper range:\"))\n",
+        "a=[(x,x**2) for x in range(l_range,u_range+1)]\n",
+        "print(a)\n",
+        "#The aforementioned program is already pythonic. \n",
+        "#We can still make it more pythonic as follows \n",
+        " \n",
+        "a=[(x,x**2) for x in range(int(input(\"Enter the lower range:\")),\\\n",
+        "                           int(input(\"Enter the upper range:\"))+1)]\n",
+        "print(a)\n",
+        "print([(x,x**2) for x in range(int(input(\"Enter the lower range:\")),\\\n",
+        "                           int(input(\"Enter the upper range:\"))+1)])\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the lower range:2\n",
+            "Enter the upper range:3\n",
+            "[(2, 4), (3, 9)]\n",
+            "Enter the lower range:1\n",
+            "Enter the upper range:3\n",
+            "[(1, 1), (2, 4), (3, 9)]\n",
+            "Enter the lower range:2\n",
+            "Enter the upper range:1\n",
+            "[]\n"
           ],
           "name": "stdout"
         }
