--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMj++KlXw+NQ4Jt3IKQLLyr",
+      "authorship_tag": "ABX9TyPSvL9TCwTUqf87Nc0CEyIc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -320,6 +320,37 @@
             "Enter the lower range:2\n",
             "Enter the upper range:1\n",
             "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k7Eca0zcXOzC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "2da0d343-e5d3-47a0-fa82-2cc75f793554"
+      },
+      "source": [
+        "import random\n",
+        "a=[]\n",
+        "n=int(input(\"Enter number of elements:\"))\n",
+        "for j in range(n):\n",
+        "    a.append(random.randint(1,20))\n",
+        "print('Randomised list is: ',a)\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter number of elements:2\n",
+            "Randomised list is:  [1, 17]\n"
           ],
           "name": "stdout"
         }
