--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSvL9TCwTUqf87Nc0CEyIc",
+      "authorship_tag": "ABX9TyNfr+BdfwEKez/bhYTKhc/M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,6 +353,102 @@
             "Randomised list is:  [1, 17]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r6Le4fXvYqHj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "6a19fca7-2cf5-4162-c50d-734c61cbdc3f"
+      },
+      "source": [
+        "[i for i in range(200) if i % 3 == 0 ]"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0,\n",
+              " 3,\n",
+              " 6,\n",
+              " 9,\n",
+              " 12,\n",
+              " 15,\n",
+              " 18,\n",
+              " 21,\n",
+              " 24,\n",
+              " 27,\n",
+              " 30,\n",
+              " 33,\n",
+              " 36,\n",
+              " 39,\n",
+              " 42,\n",
+              " 45,\n",
+              " 48,\n",
+              " 51,\n",
+              " 54,\n",
+              " 57,\n",
+              " 60,\n",
+              " 63,\n",
+              " 66,\n",
+              " 69,\n",
+              " 72,\n",
+              " 75,\n",
+              " 78,\n",
+              " 81,\n",
+              " 84,\n",
+              " 87,\n",
+              " 90,\n",
+              " 93,\n",
+              " 96,\n",
+              " 99,\n",
+              " 102,\n",
+              " 105,\n",
+              " 108,\n",
+              " 111,\n",
+              " 114,\n",
+              " 117,\n",
+              " 120,\n",
+              " 123,\n",
+              " 126,\n",
+              " 129,\n",
+              " 132,\n",
+              " 135,\n",
+              " 138,\n",
+              " 141,\n",
+              " 144,\n",
+              " 147,\n",
+              " 150,\n",
+              " 153,\n",
+              " 156,\n",
+              " 159,\n",
+              " 162,\n",
+              " 165,\n",
+              " 168,\n",
+              " 171,\n",
+              " 174,\n",
+              " 177,\n",
+              " 180,\n",
+              " 183,\n",
+              " 186,\n",
+              " 189,\n",
+              " 192,\n",
+              " 195,\n",
+              " 198]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     },
