--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfr+BdfwEKez/bhYTKhc/M",
+      "authorship_tag": "ABX9TyOwrCqN3DX2+i+uq8ePy9hA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -449,6 +449,349 @@
             "tags": []
           },
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gX2CKCBlZHoF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "4892c648-78dc-4232-e915-4287975415a7"
+      },
+      "source": [
+        "[i for i in range(1000,2000) if i % 5 == 0 or i % 7 == 0 ]\n"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1000,\n",
+              " 1001,\n",
+              " 1005,\n",
+              " 1008,\n",
+              " 1010,\n",
+              " 1015,\n",
+              " 1020,\n",
+              " 1022,\n",
+              " 1025,\n",
+              " 1029,\n",
+              " 1030,\n",
+              " 1035,\n",
+              " 1036,\n",
+              " 1040,\n",
+              " 1043,\n",
+              " 1045,\n",
+              " 1050,\n",
+              " 1055,\n",
+              " 1057,\n",
+              " 1060,\n",
+              " 1064,\n",
+              " 1065,\n",
+              " 1070,\n",
+              " 1071,\n",
+              " 1075,\n",
+              " 1078,\n",
+              " 1080,\n",
+              " 1085,\n",
+              " 1090,\n",
+              " 1092,\n",
+              " 1095,\n",
+              " 1099,\n",
+              " 1100,\n",
+              " 1105,\n",
+              " 1106,\n",
+              " 1110,\n",
+              " 1113,\n",
+              " 1115,\n",
+              " 1120,\n",
+              " 1125,\n",
+              " 1127,\n",
+              " 1130,\n",
+              " 1134,\n",
+              " 1135,\n",
+              " 1140,\n",
+              " 1141,\n",
+              " 1145,\n",
+              " 1148,\n",
+              " 1150,\n",
+              " 1155,\n",
+              " 1160,\n",
+              " 1162,\n",
+              " 1165,\n",
+              " 1169,\n",
+              " 1170,\n",
+              " 1175,\n",
+              " 1176,\n",
+              " 1180,\n",
+              " 1183,\n",
+              " 1185,\n",
+              " 1190,\n",
+              " 1195,\n",
+              " 1197,\n",
+              " 1200,\n",
+              " 1204,\n",
+              " 1205,\n",
+              " 1210,\n",
+              " 1211,\n",
+              " 1215,\n",
+              " 1218,\n",
+              " 1220,\n",
+              " 1225,\n",
+              " 1230,\n",
+              " 1232,\n",
+              " 1235,\n",
+              " 1239,\n",
+              " 1240,\n",
+              " 1245,\n",
+              " 1246,\n",
+              " 1250,\n",
+              " 1253,\n",
+              " 1255,\n",
+              " 1260,\n",
+              " 1265,\n",
+              " 1267,\n",
+              " 1270,\n",
+              " 1274,\n",
+              " 1275,\n",
+              " 1280,\n",
+              " 1281,\n",
+              " 1285,\n",
+              " 1288,\n",
+              " 1290,\n",
+              " 1295,\n",
+              " 1300,\n",
+              " 1302,\n",
+              " 1305,\n",
+              " 1309,\n",
+              " 1310,\n",
+              " 1315,\n",
+              " 1316,\n",
+              " 1320,\n",
+              " 1323,\n",
+              " 1325,\n",
+              " 1330,\n",
+              " 1335,\n",
+              " 1337,\n",
+              " 1340,\n",
+              " 1344,\n",
+              " 1345,\n",
+              " 1350,\n",
+              " 1351,\n",
+              " 1355,\n",
+              " 1358,\n",
+              " 1360,\n",
+              " 1365,\n",
+              " 1370,\n",
+              " 1372,\n",
+              " 1375,\n",
+              " 1379,\n",
+              " 1380,\n",
+              " 1385,\n",
+              " 1386,\n",
+              " 1390,\n",
+              " 1393,\n",
+              " 1395,\n",
+              " 1400,\n",
+              " 1405,\n",
+              " 1407,\n",
+              " 1410,\n",
+              " 1414,\n",
+              " 1415,\n",
+              " 1420,\n",
+              " 1421,\n",
+              " 1425,\n",
+              " 1428,\n",
+              " 1430,\n",
+              " 1435,\n",
+              " 1440,\n",
+              " 1442,\n",
+              " 1445,\n",
+              " 1449,\n",
+              " 1450,\n",
+              " 1455,\n",
+              " 1456,\n",
+              " 1460,\n",
+              " 1463,\n",
+              " 1465,\n",
+              " 1470,\n",
+              " 1475,\n",
+              " 1477,\n",
+              " 1480,\n",
+              " 1484,\n",
+              " 1485,\n",
+              " 1490,\n",
+              " 1491,\n",
+              " 1495,\n",
+              " 1498,\n",
+              " 1500,\n",
+              " 1505,\n",
+              " 1510,\n",
+              " 1512,\n",
+              " 1515,\n",
+              " 1519,\n",
+              " 1520,\n",
+              " 1525,\n",
+              " 1526,\n",
+              " 1530,\n",
+              " 1533,\n",
+              " 1535,\n",
+              " 1540,\n",
+              " 1545,\n",
+              " 1547,\n",
+              " 1550,\n",
+              " 1554,\n",
+              " 1555,\n",
+              " 1560,\n",
+              " 1561,\n",
+              " 1565,\n",
+              " 1568,\n",
+              " 1570,\n",
+              " 1575,\n",
+              " 1580,\n",
+              " 1582,\n",
+              " 1585,\n",
+              " 1589,\n",
+              " 1590,\n",
+              " 1595,\n",
+              " 1596,\n",
+              " 1600,\n",
+              " 1603,\n",
+              " 1605,\n",
+              " 1610,\n",
+              " 1615,\n",
+              " 1617,\n",
+              " 1620,\n",
+              " 1624,\n",
+              " 1625,\n",
+              " 1630,\n",
+              " 1631,\n",
+              " 1635,\n",
+              " 1638,\n",
+              " 1640,\n",
+              " 1645,\n",
+              " 1650,\n",
+              " 1652,\n",
+              " 1655,\n",
+              " 1659,\n",
+              " 1660,\n",
+              " 1665,\n",
+              " 1666,\n",
+              " 1670,\n",
+              " 1673,\n",
+              " 1675,\n",
+              " 1680,\n",
+              " 1685,\n",
+              " 1687,\n",
+              " 1690,\n",
+              " 1694,\n",
+              " 1695,\n",
+              " 1700,\n",
+              " 1701,\n",
+              " 1705,\n",
+              " 1708,\n",
+              " 1710,\n",
+              " 1715,\n",
+              " 1720,\n",
+              " 1722,\n",
+              " 1725,\n",
+              " 1729,\n",
+              " 1730,\n",
+              " 1735,\n",
+              " 1736,\n",
+              " 1740,\n",
+              " 1743,\n",
+              " 1745,\n",
+              " 1750,\n",
+              " 1755,\n",
+              " 1757,\n",
+              " 1760,\n",
+              " 1764,\n",
+              " 1765,\n",
+              " 1770,\n",
+              " 1771,\n",
+              " 1775,\n",
+              " 1778,\n",
+              " 1780,\n",
+              " 1785,\n",
+              " 1790,\n",
+              " 1792,\n",
+              " 1795,\n",
+              " 1799,\n",
+              " 1800,\n",
+              " 1805,\n",
+              " 1806,\n",
+              " 1810,\n",
+              " 1813,\n",
+              " 1815,\n",
+              " 1820,\n",
+              " 1825,\n",
+              " 1827,\n",
+              " 1830,\n",
+              " 1834,\n",
+              " 1835,\n",
+              " 1840,\n",
+              " 1841,\n",
+              " 1845,\n",
+              " 1848,\n",
+              " 1850,\n",
+              " 1855,\n",
+              " 1860,\n",
+              " 1862,\n",
+              " 1865,\n",
+              " 1869,\n",
+              " 1870,\n",
+              " 1875,\n",
+              " 1876,\n",
+              " 1880,\n",
+              " 1883,\n",
+              " 1885,\n",
+              " 1890,\n",
+              " 1895,\n",
+              " 1897,\n",
+              " 1900,\n",
+              " 1904,\n",
+              " 1905,\n",
+              " 1910,\n",
+              " 1911,\n",
+              " 1915,\n",
+              " 1918,\n",
+              " 1920,\n",
+              " 1925,\n",
+              " 1930,\n",
+              " 1932,\n",
+              " 1935,\n",
+              " 1939,\n",
+              " 1940,\n",
+              " 1945,\n",
+              " 1946,\n",
+              " 1950,\n",
+              " 1953,\n",
+              " 1955,\n",
+              " 1960,\n",
+              " 1965,\n",
+              " 1967,\n",
+              " 1970,\n",
+              " 1974,\n",
+              " 1975,\n",
+              " 1980,\n",
+              " 1981,\n",
+              " 1985,\n",
+              " 1988,\n",
+              " 1990,\n",
+              " 1995]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     },
