--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOwrCqN3DX2+i+uq8ePy9hA",
+      "authorship_tag": "ABX9TyMkKbuuHqf21HaqpjUAojeG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -792,6 +792,37 @@
             "tags": []
           },
           "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xle67j85aD-l",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "b945bc06-7060-4054-d486-5373fb3238e2"
+      },
+      "source": [
+        "l=int(input(\"Enter lower range: \"))\n",
+        "u=int(input(\"Enter upper range: \"))\n",
+        "a=[]\n",
+        "a=[x for x in range(l,u+1) if (int(x**0.5))**2==x or x % 5 == 0]\n",
+        "print(a)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter lower range: 1\n",
+            "Enter upper range: 3\n",
+            "[1]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
