--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMkKbuuHqf21HaqpjUAojeG",
+      "authorship_tag": "ABX9TyOl9jrc0fNOJ6dchnhkADJx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -821,6 +821,41 @@
             "Enter lower range: 1\n",
             "Enter upper range: 3\n",
             "[1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PXtUEsL2byz7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "fe267b9d-d474-46a2-cf3a-44582c310386"
+      },
+      "source": [
+        "n=int(input(\"Enter the number of elements to be inserted: \"))\n",
+        "a=[]\n",
+        "for i in range(0,n):\n",
+        "    elem=int(input(\"Enter element: \"))\n",
+        "    a.append(elem)\n",
+        "avg=sum(a)/n\n",
+        "print(\"Average of elements in the list\",round(avg,2))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the number of elements to be inserted: 3\n",
+            "Enter element: 10\n",
+            "Enter element: 20\n",
+            "Enter element: 30\n",
+            "Average of elements in the list 20.0\n"
           ],
           "name": "stdout"
         }
