--- a/Untitled16.ipynb
+++ b/Untitled16.ipynb
@@ -34,7 +34,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -135,7 +135,11 @@
       "metadata": {
         "id": "elbFkiX-adZc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        },
+        "outputId": "da94ee2a-65b4-4347-cd05-353149986246"
       },
       "source": [
         "l = []\n",
@@ -154,8 +158,22 @@
         "l.sort(key = lambda x:x[1])\n",
         "print(f'According to Rol No : Descending :{l[::-1]}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of Students : 2\n",
+            "Name : siya\n",
+            " Rol No : 1810\n",
+            "Name : neha\n",
+            " Rol No : 1811\n",
+            "Original : [('siya', '1810'), ('neha', '1811')]\n",
+            "According to Rol No : Descending :[('neha', '1811'), ('siya', '1810')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
