--- a/Untitled16.ipynb
+++ b/Untitled16.ipynb
@@ -180,7 +180,11 @@
       "metadata": {
         "id": "qPgu6iu3aou8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "27e5a71e-bee8-4ea8-fe12-544d67fe2221"
       },
       "source": [
         "l = []\n",
@@ -199,8 +203,26 @@
         "l.sort(key = lambda x:x[1])\n",
         "print(f'According to Rol No : Ascending :{l}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of Students : 4\n",
+            "Name : tara\n",
+            " Rol No : 4001\n",
+            "Name : maya\n",
+            " Rol No : 4008\n",
+            "Name : kaya\n",
+            " Rol No : 4005\n",
+            "Name : chaya\n",
+            " Rol No : 4003\n",
+            "Original : [('tara', '4001'), ('maya', '4008'), ('kaya', '4005'), ('chaya', '4003')]\n",
+            "According to Rol No : Ascending :[('tara', '4001'), ('chaya', '4003'), ('kaya', '4005'), ('maya', '4008')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
